[tool.poetry]
name = "spotify_playlist_randomizer"
version = "0.1.0"
description = ""
authors = ["Matthew Toohey <contact@mtoohey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spotify-playlist-randomizer = "spotify_playlist_randomizer:main"
